move-robot-vehicle/docker/test/log.txt
2026-02-04 12:47:56,575 - Move_sensor - Reverse backward left: 1031 -right: -20789
Traceback (most recent call last):
  File "/usr/lib/python3/dist-packages/gpiozero/pins/pi.py", line 411, in pin
    pin = self.pins[info]
          ~~~~~~~~~^^^^^^
KeyError: PinInfo(number=11, name='GPIO17', names=frozenset({17, 'BOARD11', 'J8:11', 'WPI0', 'GPIO17', 'BCM17', '17'}), pull='', row=6, col=1, interfaces=frozenset({'', 'uart', 'spi', 'dpi', 'gpio'}))

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/app/move_behavior.py", line 102, in <module>
    behavior = Move_behavior()
  File "/app/move_behavior.py", line 35, in __init__
    self.move_app = Move_app()
                    ~~~~~~~~^^
  File "/app/move_app.py", line 26, in __init__
    self.robot = Robot()
                 ~~~~~^^
  File "/app/robot.py", line 26, in __init__
    self.left_distance_sensor = DistanceSensor(echo=17, trigger=27, queue_len=2, max_distance=1.0)
                                ~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3/dist-packages/gpiozero/devices.py", line 108, in __call__
    self = super().__call__(*args, **kwargs)
  File "/usr/lib/python3/dist-packages/gpiozero/input_devices.py", line 827, in __init__
    super().__init__(
    ~~~~~~~~~~~~~~~~^
        echo, pull_up=False, queue_len=queue_len, sample_wait=0.06,
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
        partial=partial, ignore=frozenset({None}), pin_factory=pin_factory
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "/usr/lib/python3/dist-packages/gpiozero/input_devices.py", line 257, in __init__
    super().__init__(
    ~~~~~~~~~~~~~~~~^
        pin, pull_up=pull_up, active_state=active_state,
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
        pin_factory=pin_factory)
        ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3/dist-packages/gpiozero/mixins.py", line 243, in __init__
    super().__init__(*args, **kwargs)
    ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3/dist-packages/gpiozero/input_devices.py", line 79, in __init__
    super().__init__(pin, pin_factory=pin_factory)
    ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3/dist-packages/gpiozero/devices.py", line 553, in __init__
    pin = self.pin_factory.pin(pin)
  File "/usr/lib/python3/dist-packages/gpiozero/pins/pi.py", line 413, in pin
    pin = self.pin_class(self, info)
  File "/usr/lib/python3/dist-packages/gpiozero/pins/lgpio.py", line 126, in __init__
    lgpio.gpio_claim_input(
    ~~~~~~~~~~~~~~~~~~~~~~^
        self.factory._handle, self._number, lgpio.SET_PULL_NONE)
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3/dist-packages/lgpio.py", line 755, in gpio_claim_input
    return _u2i(_lgpio._gpio_claim_input(handle&0xffff, lFlags, gpio))
  File "/usr/lib/python3/dist-packages/lgpio.py", line 458, in _u2i
    raise error(error_text(v))
lgpio.error: 'GPIO busy'
2026-02-04 12:47:56,682 - Move_sensor - Reverse backward left: 38
2026-02-04 12:47:56,682 - Move_sensor - Reverse backward right: 21314
2026-02-04 12:47:56,682 - Move_sensor - Reverse backward left-org: 1069 -right-org: 455
2026-02-04 12:47:56,682 - Move_sensor - Reverse backward left: 1031 -right: -20859
2026-02-04 12:47:56,785 - Move_sensor - Reverse backward left: 38
2026-02-04 12:47:56,785